--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     .description {
       font-size: 0.9em;
       color: #555;
-      text-align: left;
+      text-align: center;
       padding-top: 10px; /* 설명 텍스트 내부 여백 */
       padding-bottom: 5px; 
     }
@@ -108,17 +108,156 @@
 </div>
     <span class="title-text">Mongjungsan Menu</span> <!--로고 및 로고 아래 텍스트-->
 
-    <div class="item-container"> <!--녹차-->
+    <div class="item-container"> <!--차(봄)-->
       <div class="item">
-        <span class="item-name">Organic green tea</span>
-        <span class="item-price">3,000 ₩</span>
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Spring </span>
+        <span class="item-price">80,000 ₩</span>
       </div>
+      <div class="description-wrapper">
         <div class="description">
 	<div style="text-align: center;">
-	  <img src="Green_tea.jpg"  class="exception-height">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
     </div>
 
-       </div>
+    <div class="item-container"> <!--차(여름)-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Summer </span>
+        <span class="item-price">56,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--차(가을)-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Fall </span>
+        <span class="item-price">40,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--차(겨울)-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Winter </span>
+        <span class="item-price">24,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--차(홍차)-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Black tea </span>
+        <span class="item-price">48,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--호차-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Hocha </span>
+        <span class="item-price">17,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--호홍차-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Hohongcha </span>
+        <span class="item-price">17,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--홍차 티백-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Black Tea Bags </span>
+        <span class="item-price">12,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--현미 티백-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Brown rice Green tea Bags </span>
+        <span class="item-price">8,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container"> <!--녹차 티백-->
+      <div class="item">
+        <div class="arrow"></div>
+        <span class="item-name">Tea of Teas Green tea Bags </span>
+        <span class="item-price">8,000 ₩</span>
+      </div>
+      <div class="description-wrapper">
+        <div class="description">
+	<div style="text-align: center;">
+	  <img src="new_glace.jpg"  class="exception-height">
+	</div>
+        </div>
+      </div>
+    </div>
+
 
   </div>
   <a href="https://tae8076.github.io/Mongjungsan-Menu/spanish/">
