--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -111,7 +111,7 @@
     <div class="item-container"> <!--차(봄)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Spring </span>
+        <span class="item-name">Chá dos Chás Primavera</span>
         <span class="item-price">80,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -126,7 +126,7 @@
     <div class="item-container"> <!--차(여름)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Summer </span>
+        <span class="item-name">Chá dos Chás Verão</span>
         <span class="item-price">56,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -141,7 +141,7 @@
     <div class="item-container"> <!--차(가을)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Fall </span>
+        <span class="item-name">Chá dos Chás Outono</span>
         <span class="item-price">40,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -156,7 +156,7 @@
     <div class="item-container"> <!--차(겨울)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Winter </span>
+        <span class="item-name">Chá dos Chás Inverno</span>
         <span class="item-price">24,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -171,7 +171,7 @@
     <div class="item-container"> <!--차(홍차)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Black tea </span>
+        <span class="item-name">Chá dos Chás Chá preto</span>
         <span class="item-price">48,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -186,7 +186,7 @@
     <div class="item-container"> <!--호차-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Hocha </span>
+        <span class="item-name">Chá dos Chás Hocha </span>
         <span class="item-price">17,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -201,7 +201,7 @@
     <div class="item-container"> <!--호홍차-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Hohongcha </span>
+        <span class="item-name">Chá dos Chás Hohongcha </span>
         <span class="item-price">17,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -216,7 +216,7 @@
     <div class="item-container"> <!--홍차 티백-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Black Tea Bags </span>
+        <span class="item-name">Sachês de chá preto </span>
         <span class="item-price">12,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -231,7 +231,7 @@
     <div class="item-container"> <!--현미 티백-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Brown rice Green tea Bags </span>
+        <span class="item-name">Chá dos Chás Sachês de chá verde com arroz integral</span>
         <span class="item-price">8,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -246,7 +246,7 @@
     <div class="item-container"> <!--녹차 티백-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Green tea Bags </span>
+        <span class="item-name">Chá dos Chás Sachês de chá verde</span>
         <span class="item-price">8,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -260,12 +260,12 @@
 
 
   </div>
-  <a href="https://tae8076.github.io/Mongjungsan-Menu/spanish/">
-      Español
+  <a href="https://tae8076.github.io/Mongjungsan-Menu/">
+      English
     </a>
 &nbsp;
-  <a href="https://tae8076.github.io/Mongjungsan-Menu/portuguese/">
-      Português
+  <a href="https://tae8076.github.io/Mongjungsan-Menu/spanish/">
+      Español
     </a>
 &nbsp;
   <a href="https://tae8076.github.io/Mongjungsan-Menu/chinese/">
