--- a/chinese/index.html
+++ b/chinese/index.html
@@ -111,7 +111,7 @@
     <div class="item-container"> <!--차(봄)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Spring </span>
+        <span class="item-name">茶中之茶 春</span>
         <span class="item-price">80,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -126,7 +126,7 @@
     <div class="item-container"> <!--차(여름)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Summer </span>
+        <span class="item-name">茶中之茶 夏</span>
         <span class="item-price">56,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -141,7 +141,7 @@
     <div class="item-container"> <!--차(가을)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Fall </span>
+        <span class="item-name">茶中之茶 秋</span>
         <span class="item-price">40,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -156,7 +156,7 @@
     <div class="item-container"> <!--차(겨울)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Winter </span>
+        <span class="item-name">茶中之茶 冬</span>
         <span class="item-price">24,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -171,7 +171,7 @@
     <div class="item-container"> <!--차(홍차)-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Black tea </span>
+        <span class="item-name">茶中之茶 红茶</span>
         <span class="item-price">48,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -186,7 +186,7 @@
     <div class="item-container"> <!--호차-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Hocha </span>
+        <span class="item-name">茶中之茶 Hocha</span>
         <span class="item-price">17,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -201,7 +201,7 @@
     <div class="item-container"> <!--호홍차-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Hohongcha </span>
+        <span class="item-name">茶中之茶 Hohongcha</span>
         <span class="item-price">17,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -216,7 +216,7 @@
     <div class="item-container"> <!--홍차 티백-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Black Tea Bags </span>
+        <span class="item-name">茶中之茶 红茶包</span>
         <span class="item-price">12,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -231,7 +231,7 @@
     <div class="item-container"> <!--현미 티백-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Brown rice Green tea Bags </span>
+        <span class="item-name">茶中之茶 玄米绿茶包</span>
         <span class="item-price">8,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -246,7 +246,7 @@
     <div class="item-container"> <!--녹차 티백-->
       <div class="item">
         <div class="arrow"></div>
-        <span class="item-name">Tea of Teas Green tea Bags </span>
+        <span class="item-name">茶中之茶 绿茶包</span>
         <span class="item-price">8,000 ₩</span>
       </div>
       <div class="description-wrapper">
@@ -260,16 +260,16 @@
 
 
   </div>
+  <a href="https://tae8076.github.io/Mongjungsan-Menu/">
+      English
+    </a>
+&nbsp;
   <a href="https://tae8076.github.io/Mongjungsan-Menu/spanish/">
       Español
     </a>
 &nbsp;
   <a href="https://tae8076.github.io/Mongjungsan-Menu/portuguese/">
       Português
-    </a>
-&nbsp;
-  <a href="https://tae8076.github.io/Mongjungsan-Menu/chinese/">
-      中文
     </a>
 &nbsp;
   <a href="https://tae8076.github.io/Mongjungsan-Menu/thai/">
